@@ -67,6 +67,8 @@ the last proof command
 <P></P></LI>
 </UL>
 
+<!-- RECENT CHANGES END -->
+
 <DT>2012-01-03: Prooftree 0.8 released
 <DD>
 <UL>
@@ -81,8 +83,6 @@ instantiated
 <LI>various internal improvements
 <P></P></LI>
 </UL>
-
-<!-- RECENT CHANGES END -->
 
 <DT>2011-11-01
 <DD>
