@@ -1,3 +1,7 @@
+2013-01-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* after release changes
+
 2013-01-21  Hendrik Tews <prooftree@askra.de>
 
 	* release version 0.11 on 2013-01-21 16:43:11 UTC
